<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:gravity="center|top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/login_registro_button"
        android:id="@+id/login_register_button"
        android:background="@drawable/roundedbutton"
        android:singleLine="true"
        android:padding="@dimen/buttons_main_padding"
        android:clickable="true"
        android:enabled="true"
        android:textSize="13sp"
        android:layout_gravity="right|top" />

    <Button
            android:layout_width="@dimen/buttons_main_width"
            android:layout_height="wrap_content"
            android:text="@string/historia_button"
            android:id="@+id/historia_button"
            android:background="@drawable/roundedbutton"
            android:clickable="true"
            android:enabled="true"
            android:padding="@dimen/buttons_main_padding"
            android:layout_marginBottom="2.5dp"
            android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp" />

        <Button
            android:layout_width="@dimen/buttons_main_width"
            android:layout_height="wrap_content"
            android:text="@string/calendario_button"
            android:id="@+id/calendario_button"
            android:background="@drawable/roundedbutton"
            android:clickable="true"
            android:enabled="true"
            android:padding="@dimen/buttons_main_padding"
            android:layout_margin="@dimen/buttons_main_margin"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="@dimen/buttons_main_width"
            android:layout_height="wrap_content"
            android:text="@string/componentes_button"
            android:id="@+id/componentes_button"
            android:background="@drawable/roundedbutton"
            android:clickable="true"
            android:enabled="true"
            android:padding="@dimen/buttons_main_padding"
            android:layout_margin="@dimen/buttons_main_margin"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="@dimen/buttons_main_width"
            android:layout_height="wrap_content"
            android:text="@string/contacto_button"
            android:id="@+id/contacto_button"
            android:background="@drawable/roundedbutton"
            android:clickable="true"
            android:enabled="true"
            android:padding="@dimen/buttons_main_padding"
            android:layout_margin="@dimen/buttons_main_margin"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom"
        android:layout_marginTop="80dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/facebook_button"
            android:background="@drawable/ic_facebook"
            android:focusableInTouchMode="true"
            android:layout_marginRight="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/web_button"
            android:background="@drawable/ic_web"
            android:layout_marginLeft="10dp" />
    </LinearLayout>



</LinearLayout>